[gd_scene load_steps=2 format=3 uid="uid://b5w5d4q3v2a0c"]

[ext_resource type="Script" uid="uid://d0xrdhs1np3hx" path="res://tests/manual_test/manual_solver_test.gd" id="1_wexqg"]

[node name="ManualSolverTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wexqg")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Enter 81-digit puzzle string:"
horizontal_alignment = 1

[node name="PuzzleInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "0043002... or 81 digits"

[node name="SolveButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Solve with Hints"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Status: Waiting"
horizontal_alignment = 1

[node name="ResultOutput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Result:"
